# pynanigans

./: .gitignore  README.md  __init__.py  environment.yml  grids.py  pyenv_install.bash  pyproject.toml  setup.py
.github/workflows/: tests.yml
pynanigans/: __init__.py  grids.py  pnplot.py  utils.py
tests/: Project.toml  make_netcdf.jl  test_grids.py  test_pnplot.py  test_utils.py  uvw.nc
