[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pynanigans"
version = "0.2.0"
description = "A Python package for working with Oceananigans data"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Tomas Chor", email = "contact@tomaschor.xyz"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
]
dependencies = [
    "numpy",
    "xarray",
    "xgcm",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/tomchor/pynanigans" 
